Update CI to have a PostgreSQL database

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
       - main
 
   pull_request:
-
+    branches:
+      - "*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +16,16 @@ jobs:
       matrix:
         ruby:
           - '3.3.0'
+    services:
+      postgres:
+        image: postgres:16-alpine
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: uuid_migrations_test
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
